--- a/src/index.html
+++ b/src/index.html
@@ -93,10 +93,12 @@
 
 </div>
 
-<div class="footer">
+<footer >
+  <div class="container">
   <h3>Contact Us</h3>
   <p>Feel free to contact me at <a href="mailto:blair.sweigman@rogers.com">blair.sweigman@rogers.com</a></p>
 </div>
+</footer>
  
 
 
